add db connection

--- a/app/composer.json
+++ b/app/composer.json
@@ -16,5 +16,9 @@
     },
     "scripts": {
         "run-phpunit": "vendor/bin/phpunit"
-    }
+    },
+  "require": {
+    "ext-mysqli": "*",
+    "ext-pdo": "*"
+  }
 }
