--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,16 +15,18 @@ services:
             - ./app:/var/www/html
     # mysql
     db:
-        image: mysql:8.0
-        volumes:
-            - mysqldata:/var/lib/mysql
-        ports:
-            - "3306:3306"
-        restart: unless-stopped
+        image: mysql:latest
         environment:
-            MYSQL_ROOT_PASSWORD: secret
-            MYSQL_USER: user
-            MYSQL_PASSWORD: secret
-            MYSQL_DATABASE: docker-php
+            - MYSQL_DATABASE=php_docker
+            - MYSQL_USER=php_docker
+            - MYSQL_PASSWORD=password # this should live in a env var
+            - MYSQL_ALLOW_EMPTY_PASSWORD=1 # equivalent to True
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        ports:
+            - 8001:80
+        environment:
+            - PMA_HOST=db
+            - PMA_PORT=3306
 volumes:
     mysqldata:
