--- a/app/composer.json
+++ b/app/composer.json
@@ -20,5 +20,8 @@
   "require": {
     "ext-mysqli": "*",
     "ext-pdo": "*"
-  }
+  },
+    "require-dev": {
+        "phpunit/phpunit": "10.5.x-dev"
+    }
 }
